# codefend-user-public

./: .env  .eslintrc  .gitignore  README.md  capacitor.config.json  ecosystem.config.js  index.html  notes.txt  package.json  releases.json  tailwind.config.js  update.json
.github/workflows/: build.yml  web.yml  webapp_prod.yml
android/: .gitignore  build.gradle  capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
public/flags/: flags.css
src/: AppRoutes.jsx  flags.css  history.jsx  index.jsx  index.scss
src-tauri/: Cargo.toml  app_manifest.xml  tauri.conf.json
src-tauri/src/: main.rs  parser.rs
src/Services/: apiHandler.jsx
src/Services/ApiHandlerV2/: auth.handler.js  cloud.handler.js  companyServices.handler.js  customerSupport.handler.js  endpoints.handler.js  fetch.js  index.js  internalNetwork.handler.js  inx.handler.js  issues.handler.js  mobileApplication.handler.js  preferences.handler.js  socials.handler.js  sourceCode.handler.js  webResources.handler.js
src/Store/: company.jsx  internalNetworks.jsx  modal.jsx  progressBar.jsx  resources.jsx  user.jsx
src/components/AppEditor/: index.jsx
src/components/ButtonLoader/: buttonLoader.jsx
src/components/Logo/: logo.jsx
src/components/Navbar/: navbar.jsx
src/components/Sidebar/: sidebar.jsx
src/components/Table/: index.jsx  table.scss  tableColumnDef.js
src/components/Views/: adminCompanyPanel.jsx  adminPanel.jsx  cloud.jsx  companies.jsx  dashboard.jsx  enp.jsx  internalNetwork.jsx  inx.jsx  issueDetail.jsx  issues.jsx  mobileApplication.jsx  preferences.jsx  sb.jsx  signin.jsx  signup.jsx  signupfinish.jsx  sns.jsx  socialEngineering.jsx  sourceCode.jsx  support.jsx  vdb.jsx  webApplication.jsx
src/constantData/: countries.js  index.js
src/editor/: index.js
src/editor/visual/mce/models/: 01.html  (+1 more)
src/utils/: config.js  helper.js
src/views/: AdminCompanyView.jsx  AdminPanelView.jsx  CloudView.jsx  CompaniesView.jsx  DashboardView.jsx  EnpView.jsx  InternalNetworkView.jsx  InxView.jsx  IssueDetailView.jsx  IssuesView.jsx  Loader.jsx  LoginView.jsx  MobileApplicationView.jsx  PreferencesView.jsx  RegisterFinishView.jsx  RegisterView.jsx  SnsView.jsx  SocialView.jsx  SourceCodeView.jsx  SupportView.jsx  VdbView.jsx  WebApplicationView.jsx
(+82 files in other folders)
