[package]
name = "codefend"
version = "0.9.0"
description = "Codefendd desktop app"
authors = ["codefend"]
license = ""
repository = ""
edition = "2021"

[package.metadata.windows]
resource = "app_manifest.xml"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
is_elevated = "0.1"
winapi = { version = "0.3.9", features = ["winbase"] }
base64 = "0.13"
futures = "0.3"
futures-util = "0.3"
mdns-sd = "0.10.1"
encoding_rs = "0.8.28"
regex = "1.5"
mac_address = "1.1.5"
# winsafe = { git = "https://github.com/rodrigocfd/winsafe", features = ["kernel"] }
# la linea de arriba se ve especial.

#chris dependencies
reqwest = { version = "0.11.23", features = ["blocking"] }
sys-info = "0.9.1"
local-ip-address = "0.5.6"
tokio = "1.35.1"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
